# ssb-metodebiblioteket

./: .Rbuildignore  .gitignore  .nojekyll  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.Rmd  README.md  SECURITY.md  _site.yml  bidra.html  bidra.md  browse.Rmd  browse.html  browse.xml  catalog.Rmd  catalog.html  catalogue_conf.Rmd  catalogue_conf.html  catalogue_edit.Rmd  catalogue_edit.html  catalogue_est.html  catalogue_sesong.html  daplalab.html  enhetstester.html  index.Rmd  index.html  katalogdata.csv  prosess.html  robots.txt  rogpython.html  search.json  sitemap.xml  status.html  status.md
Python-and-R/: subprocess_kjoring.py
Python-og-R/: README.md  beskytte_tabellen.R  beskytte_tabellen_args.R  pyproject.toml  reticulate_kjoring.R  rwrapr_kjoring.py  subprocess_kjoring.py
R/: add_funcs.R  auto_test.R  create_bib.R  create_table.R  document_data.R  reexports.R  scrape_funcs.R  testing.R
create_check/: create_table.R  create_testdata.R  github_scrap.R
data/: aku_testdata.RData  aku_testpop.RData  df.RData  df_Hb.Rdata  df_empty.RData  df_out_reg_mic.RData  df_quartile.RData  df_quartile_strata.RData  df_strata.RData  katalogdata.csv  kostra_ratioTest.RData  kostra_testdata.RData
docs/: README.html  about.html  browse.html  browse.xml  catalog.html  catalog.xml  catalogue_conf.html  catalogue_edit.html  index.html  prosess.html  search.json  sitemap.xml  test.Rd  theme.css
internal/: add_funcs.R  badges.R  check_funcs.R  create_table.R  create_testdata.R  github_scrap.R  run_scraping.R  scrape_funcs.R  test_scrap.R
man/: add_func.Rd  df.Rd  (+9 more)
(+125 files in other folders)
