[project]
name = "python-and-r"
version = "0.1.0"
description = ""
authors = [
    {name = "sjentoft",email = "susiejentoft@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.10"
dependencies = [
    "ssb-fagfunksjoner (>=1.1.2,<2.0.0)",
    "rwrapr (>=0.9.1,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
