[project]
name = "python-and-r"
version = "0.1.0"
description = ""
authors = [
    {name = "sjentoft",email = "susiejentoft@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.10"
dependencies = [
    "ssb-fagfunksjoner (>=1.1.2,<2.0.0)",
    "rwrapr (>=0.9.1,<0.10.0)",
    "urllib3 >=2.6.0",
    "starlette >=0.49.1",
    "filelock >=3.20.1"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
